<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity3">
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="1"
        android:title="@string/menu_settings"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/menu_save_file"
        android:orderInCategory="2"
        android:title="@string/big"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/menu_middle"
        android:orderInCategory="3"
        android:title="@string/middle"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/menu_small"
        android:orderInCategory="4"
        android:title="@string/small"
        app:showAsAction="never">
    </item>
</menu>